--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@
   
   /* Hero Style Start */
   .hero {
-    background-image: url(/images/hero-bg.jpg');
+    background-image: url(/images/hero-bg.jpg);
     height: 600px;
     background-size: cover;
     background-position: center;
@@ -226,7 +226,7 @@
     text-align: right;
   }
   
-  /* REACH OUT STYLES START */
+  /* reach out */
   .contact {
     text-align: center;
     background: #024e76;
