--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@
     background-color: #fce138;
     padding: 20px;
     width: 500px;
+    height: 485px;
     color: #024e76;
     position: absolute;
     bottom: 120px;
