--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@
     height: 300px;
     background-size: cover;
     background-position: center;
-    position: relative;
+    position: fixed;
   }
   /* Hero Style End */
   
