--- a/style.css
+++ b/style.css
@@ -1,16 +1,15 @@
-* {
-    margin: 0;
-    padding: 0;
+ * {
+    margin: 0; 
+    padding: 0; 
     box-sizing: border-box;
   }
   
   body {
-    /* more on this crazy alphanumerical value in a minute! */
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
   }
   
-  /* apply styles to <header> */
+  /* header styles */
   header {
     padding: 20px 35px;
     background-color: #39a6b2;
@@ -72,20 +71,19 @@
   
   /* Hero Style Start */
   .hero {
-    background-image: url(hero-bg.jpg);
-    height: 300px;
+    background-image: url('hero-bg.jpg');
+    height: 600px;
     background-size: cover;
     background-position: center;
-    position: fixed;
+    position: relative;
   }
-  /* Hero Style End */
+  /* Hero Form */
   
   .hero-form {
     border: 3px solid #024e76;
     background-color: #fce138;
     padding: 20px;
     width: 500px;
-    height: 485px;
     color: #024e76;
     position: absolute;
     bottom: 120px;
@@ -119,7 +117,7 @@
     background-color: #024e76;
     border: none;
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 17px;
   }
   
   .intro {
@@ -181,7 +179,7 @@
   }
   
   .trainers {
-    text-align: center;
+    text-align: center
   }
   
   .trainer {
@@ -268,5 +266,4 @@
     color: #fce138;
   }
   
-  /* REACH OUT STYLES END */
   
